--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <button name="rand" id="rand" onclick="game.player.randoming()">Раставить корабли</button>
     <canvas id="canvas"></canvas>
 
     <script src="Mouse.js"></script>
